--- a/Pear/Controllers/Create Profile Flow/Preferences Input/GetStartedChoosePreferencesViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Preferences Input/GetStartedChoosePreferencesViewController.storyboard
@@ -9,11 +9,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Nunito-Regular.ttf">
-            <string>Nunito-Regular</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Get Started Choose Preferences View Controller-->
         <scene sceneID="zkU-b4-VWU">
@@ -23,66 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="They're interested in..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UVP-TE-SBb">
-                                <rect key="frame" x="30" y="86" width="315" height="38.5"/>
-                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OZL-J0-kuN">
-                                <rect key="frame" x="20" y="465" width="335" height="50"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="vwu-eO-Sn7"/>
-                                </constraints>
-                                <state key="normal" title="Female"/>
-                                <connections>
-                                    <action selector="chooseGenderButtonClicked:" destination="kKf-Mw-9LH" eventType="touchUpInside" id="5FM-Ka-VRo"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-female" translatesAutoresizingMaskIntoConstraints="NO" id="OHV-Ql-QUw">
-                                <rect key="frame" x="28" y="475" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="0cK-cU-BQ5"/>
-                                    <constraint firstAttribute="height" constant="30" id="Sws-P3-c3u"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2F-k7-dyc">
-                                <rect key="frame" x="20" y="403" width="335" height="50"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="D1l-NZ-YGr"/>
-                                </constraints>
-                                <state key="normal" title="Male"/>
-                                <connections>
-                                    <action selector="chooseGenderButtonClicked:" destination="kKf-Mw-9LH" eventType="touchUpInside" id="mle-yc-2J3"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-male" translatesAutoresizingMaskIntoConstraints="NO" id="4x4-S3-PVC">
-                                <rect key="frame" x="28" y="413" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="JK7-hM-Qrq"/>
-                                    <constraint firstAttribute="width" constant="30" id="mO7-Ga-wxQ"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BbG-8Y-0wg">
-                                <rect key="frame" x="20" y="527" width="335" height="50"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="a5u-Ku-Nbl"/>
-                                </constraints>
-                                <state key="normal" title="Non Binary"/>
-                                <connections>
-                                    <action selector="chooseGenderButtonClicked:" destination="kKf-Mw-9LH" eventType="touchUpInside" id="NWS-rZ-bHR"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-gender-nonbinary" translatesAutoresizingMaskIntoConstraints="NO" id="9NX-kp-arR">
-                                <rect key="frame" x="28" y="537" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="JX0-1r-bmo"/>
-                                    <constraint firstAttribute="width" constant="30" id="bna-9G-1eR"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bge-BR-DMa" userLabel="Header Container">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
@@ -148,41 +83,58 @@
                                     <constraint firstAttribute="height" constant="50" id="JWb-2f-Czr"/>
                                 </constraints>
                                 <state key="normal" title="Next"/>
+                                <connections>
+                                    <action selector="nextButtonClicked:" destination="kKf-Mw-9LH" eventType="touchUpInside" id="yjk-9f-qmc"/>
+                                </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f19-dA-vkk">
+                                <rect key="frame" x="0.0" y="70" width="375" height="507"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eFR-c1-cfi">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="They're interested in..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPm-YY-mOw">
+                                                <rect key="frame" x="102.5" y="12" width="170.5" height="473.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="They can change this later." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9An-xr-JG1">
+                                                <rect key="frame" x="20" y="493.5" width="335" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="9An-xr-JG1" firstAttribute="centerX" secondItem="eFR-c1-cfi" secondAttribute="centerX" id="8xz-0u-lDt"/>
+                                            <constraint firstAttribute="bottom" secondItem="9An-xr-JG1" secondAttribute="bottom" constant="8" id="Fzk-wi-qTz"/>
+                                            <constraint firstItem="9An-xr-JG1" firstAttribute="top" secondItem="RPm-YY-mOw" secondAttribute="bottom" constant="8" id="MC4-vd-VOl"/>
+                                            <constraint firstItem="9An-xr-JG1" firstAttribute="leading" secondItem="eFR-c1-cfi" secondAttribute="leading" constant="20" id="c3D-bf-1G7"/>
+                                            <constraint firstAttribute="trailing" secondItem="9An-xr-JG1" secondAttribute="trailing" constant="20" id="d6x-Mi-Ilc"/>
+                                            <constraint firstItem="RPm-YY-mOw" firstAttribute="centerX" secondItem="eFR-c1-cfi" secondAttribute="centerX" id="imt-vW-lEg"/>
+                                            <constraint firstItem="RPm-YY-mOw" firstAttribute="top" secondItem="eFR-c1-cfi" secondAttribute="top" constant="12" id="nbp-1j-y6m"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="OHV-Ql-QUw" firstAttribute="centerY" secondItem="OZL-J0-kuN" secondAttribute="centerY" id="6DG-eY-A0o"/>
-                            <constraint firstItem="UVP-TE-SBb" firstAttribute="centerX" secondItem="Dzd-eP-Bnd" secondAttribute="centerX" id="96b-7J-hCz"/>
-                            <constraint firstItem="tpP-6L-LjU" firstAttribute="top" secondItem="BbG-8Y-0wg" secondAttribute="bottom" constant="20" id="CBp-ZU-hwl"/>
-                            <constraint firstItem="OZL-J0-kuN" firstAttribute="top" secondItem="C2F-k7-dyc" secondAttribute="bottom" constant="12" id="D8s-iU-Jwd"/>
-                            <constraint firstItem="Dzd-eP-Bnd" firstAttribute="trailing" secondItem="BbG-8Y-0wg" secondAttribute="trailing" constant="20" id="HDw-fE-6uL"/>
+                            <constraint firstItem="f19-dA-vkk" firstAttribute="top" secondItem="Bge-BR-DMa" secondAttribute="bottom" id="DhY-pz-BYO"/>
                             <constraint firstItem="Bge-BR-DMa" firstAttribute="top" secondItem="Dzd-eP-Bnd" secondAttribute="top" id="KkK-he-EXw"/>
                             <constraint firstItem="Dzd-eP-Bnd" firstAttribute="bottom" secondItem="tpP-6L-LjU" secondAttribute="bottom" constant="20" id="Lg2-Hc-qVf"/>
-                            <constraint firstItem="OHV-Ql-QUw" firstAttribute="leading" secondItem="OZL-J0-kuN" secondAttribute="leading" constant="8" id="OGa-h6-oky"/>
-                            <constraint firstItem="4x4-S3-PVC" firstAttribute="leading" secondItem="C2F-k7-dyc" secondAttribute="leading" constant="8" id="OnR-xo-1NN"/>
-                            <constraint firstItem="UVP-TE-SBb" firstAttribute="top" secondItem="Bge-BR-DMa" secondAttribute="bottom" constant="16" id="Ql8-Ml-4uJ"/>
-                            <constraint firstItem="BbG-8Y-0wg" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" constant="20" id="RJm-6z-8b1"/>
-                            <constraint firstItem="4x4-S3-PVC" firstAttribute="centerY" secondItem="C2F-k7-dyc" secondAttribute="centerY" id="VxX-rf-DuR"/>
+                            <constraint firstItem="f19-dA-vkk" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" id="QTe-0C-n7C"/>
                             <constraint firstItem="Dzd-eP-Bnd" firstAttribute="trailing" secondItem="Bge-BR-DMa" secondAttribute="trailing" id="etD-R1-m2m"/>
-                            <constraint firstItem="Dzd-eP-Bnd" firstAttribute="trailing" secondItem="UVP-TE-SBb" secondAttribute="trailing" constant="30" id="gPc-gn-81j"/>
-                            <constraint firstItem="BbG-8Y-0wg" firstAttribute="top" secondItem="OZL-J0-kuN" secondAttribute="bottom" constant="12" id="imD-NR-fFg"/>
-                            <constraint firstItem="9NX-kp-arR" firstAttribute="leading" secondItem="BbG-8Y-0wg" secondAttribute="leading" constant="8" id="kLN-Vz-UVI"/>
-                            <constraint firstItem="OZL-J0-kuN" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" constant="20" id="mVw-ZN-Cjg"/>
+                            <constraint firstItem="tpP-6L-LjU" firstAttribute="top" secondItem="f19-dA-vkk" secondAttribute="bottom" constant="20" id="ssh-RP-qb6"/>
                             <constraint firstItem="Bge-BR-DMa" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" id="sw2-He-I9e"/>
-                            <constraint firstItem="Dzd-eP-Bnd" firstAttribute="trailing" secondItem="OZL-J0-kuN" secondAttribute="trailing" constant="20" id="v04-vR-CWG"/>
-                            <constraint firstItem="C2F-k7-dyc" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" constant="20" id="wLe-zA-owu"/>
-                            <constraint firstItem="9NX-kp-arR" firstAttribute="centerY" secondItem="BbG-8Y-0wg" secondAttribute="centerY" id="xNt-Mj-sQW"/>
-                            <constraint firstItem="Dzd-eP-Bnd" firstAttribute="trailing" secondItem="C2F-k7-dyc" secondAttribute="trailing" constant="20" id="zos-Kg-pyA"/>
-                            <constraint firstItem="UVP-TE-SBb" firstAttribute="leading" secondItem="Dzd-eP-Bnd" secondAttribute="leading" constant="30" id="ztq-xA-b00"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dzd-eP-Bnd"/>
                     </view>
                     <connections>
-                        <outlet property="femaleButton" destination="OZL-J0-kuN" id="jC2-Sg-kLe"/>
-                        <outlet property="maleButton" destination="C2F-k7-dyc" id="RSF-Z7-hgP"/>
-                        <outlet property="nonbinaryButton" destination="BbG-8Y-0wg" id="mjN-Vj-Sgn"/>
                         <outlet property="progressWidthConstraint" destination="Yi6-je-Hmc" id="Cuk-q6-PqZ"/>
+                        <outlet property="stackView" destination="f19-dA-vkk" id="m7I-Of-gTI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Twq-mq-8Ag" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -194,8 +146,5 @@
         <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
         <image name="onboarding-close-button" width="120" height="120"/>
         <image name="onboarding-icon-gender" width="512" height="512"/>
-        <image name="onboarding-icon-gender-female" width="128" height="128"/>
-        <image name="onboarding-icon-gender-male" width="128" height="128"/>
-        <image name="onboarding-icon-gender-nonbinary" width="128" height="128"/>
     </resources>
 </document>
