--- a/Pear/Controllers/Profiles/Full Profile View/Full Profile Scroll/FullProfileScrollViewController.storyboard
+++ b/Pear/Controllers/Profiles/Full Profile View/Full Profile Scroll/FullProfileScrollViewController.storyboard
@@ -21,6 +21,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lb2-5H-MMS" userLabel="Header Container">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3c-Xz-MmZ">
+                                        <rect key="frame" x="187.5" y="25" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eG-b0-BBl" userLabel="Back Button">
                                         <rect key="frame" x="12" y="5" width="40" height="40"/>
                                         <constraints>
@@ -49,6 +55,8 @@
                                     <constraint firstAttribute="height" constant="50" id="MYw-Fe-fYx"/>
                                     <constraint firstItem="Jst-Tn-iZQ" firstAttribute="width" secondItem="lb2-5H-MMS" secondAttribute="width" id="WFM-nM-gj8"/>
                                     <constraint firstAttribute="bottom" secondItem="Jst-Tn-iZQ" secondAttribute="bottom" id="iIU-eZ-hbX"/>
+                                    <constraint firstItem="j3c-Xz-MmZ" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="kLS-Xw-WfB"/>
+                                    <constraint firstItem="j3c-Xz-MmZ" firstAttribute="centerX" secondItem="lb2-5H-MMS" secondAttribute="centerX" id="ouS-ud-JGr"/>
                                     <constraint firstItem="2eG-b0-BBl" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="u2o-Xj-JrU"/>
                                 </constraints>
                             </view>
@@ -70,6 +78,7 @@
                         <viewLayoutGuide key="safeArea" id="yBm-A3-ChV"/>
                     </view>
                     <connections>
+                        <outlet property="firstNameLabel" destination="j3c-Xz-MmZ" id="5CG-Tl-j3C"/>
                         <outlet property="scrollView" destination="FuM-UC-gNb" id="lel-Ww-Xqa"/>
                     </connections>
                 </viewController>
@@ -79,6 +88,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="120" height="120"/>
+        <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
     </resources>
 </document>
