--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JZe-kz-mxa">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,21 +20,21 @@
             <objects>
                 <viewController id="JZe-kz-mxa" customClass="DiscoverySimpleViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nya-gS-WUR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQd-OH-Yda" userLabel="Header Container">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="50"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7au-ld-HzR" userLabel="Decoration Line">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="1"/>
+                                        <rect key="frame" x="0.0" y="49" width="414" height="1"/>
                                         <color key="backgroundColor" red="0.5413542529295774" green="0.59388107139577462" blue="0.65045481217323942" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="Sz9-k2-tjm"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vuR-Es-i0O">
-                                        <rect key="frame" x="168.5" y="6" width="38" height="38"/>
+                                        <rect key="frame" x="188" y="6" width="38" height="38"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="vuR-Es-i0O" secondAttribute="height" multiplier="1:1" id="u3N-w7-DXE"/>
                                         </constraints>
@@ -43,27 +43,40 @@
                                             <action selector="discoveryIconClicked:" destination="JZe-kz-mxa" eventType="touchUpInside" id="3qn-cT-tfb"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="stL-WM-NaG">
+                                        <rect key="frame" x="366" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="stL-WM-NaG" secondAttribute="height" multiplier="1:1" id="9TZ-zM-GTf"/>
+                                        </constraints>
+                                        <state key="normal" image="discovery-icon-tree"/>
+                                        <connections>
+                                            <action selector="filtersButtonClicked:" destination="JZe-kz-mxa" eventType="touchUpInside" id="yw6-xV-9WY"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="7au-ld-HzR" firstAttribute="top" secondItem="vuR-Es-i0O" secondAttribute="bottom" constant="5" id="IPo-Oc-ZPC"/>
+                                    <constraint firstAttribute="trailing" secondItem="stL-WM-NaG" secondAttribute="trailing" constant="8" id="KRC-uv-4gu"/>
                                     <constraint firstAttribute="height" constant="50" id="Ter-JC-iAf"/>
+                                    <constraint firstItem="stL-WM-NaG" firstAttribute="centerY" secondItem="XQd-OH-Yda" secondAttribute="centerY" id="d8S-Lu-SRn"/>
                                     <constraint firstItem="vuR-Es-i0O" firstAttribute="centerY" secondItem="XQd-OH-Yda" secondAttribute="centerY" id="kMp-2V-Mnq"/>
                                     <constraint firstAttribute="bottom" secondItem="7au-ld-HzR" secondAttribute="bottom" id="mLS-8o-9SL"/>
+                                    <constraint firstAttribute="bottom" secondItem="stL-WM-NaG" secondAttribute="bottom" constant="5" id="oay-cm-pPX"/>
                                     <constraint firstItem="7au-ld-HzR" firstAttribute="width" secondItem="XQd-OH-Yda" secondAttribute="width" id="tJh-DZ-uOv"/>
                                     <constraint firstItem="vuR-Es-i0O" firstAttribute="centerX" secondItem="XQd-OH-Yda" secondAttribute="centerX" id="vt9-LL-6Li"/>
                                     <constraint firstItem="7au-ld-HzR" firstAttribute="leading" secondItem="XQd-OH-Yda" secondAttribute="leading" id="zMV-v4-8k4"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VgD-Ez-iF8">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="70" width="414" height="666"/>
                                 <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SimpleDiscoveryTVC" rowHeight="484" id="dpC-89-kHb" customClass="DiscoveryTableViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="484"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="484"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dpC-89-kHb" id="X8o-go-E0H">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="484"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="484"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QfY-r4-Y8X">
@@ -101,10 +114,10 @@
                                                                     </constraints>
                                                                 </scrollView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BEB-YS-xqY">
-                                                                    <rect key="frame" x="0.0" y="343" width="343" height="41"/>
+                                                                    <rect key="frame" x="0.0" y="343" width="343" height="24"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBX-uV-4pf">
-                                                                            <rect key="frame" x="16" y="16" width="315" height="17"/>
+                                                                            <rect key="frame" x="16" y="16" width="315" height="0.0"/>
                                                                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -119,7 +132,7 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phU-QS-g7I">
-                                                                    <rect key="frame" x="0.0" y="384" width="343" height="50"/>
+                                                                    <rect key="frame" x="0.0" y="367" width="343" height="50"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fa-nN-H5Y">
                                                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
@@ -144,17 +157,17 @@
                                                                     </constraints>
                                                                 </scrollView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gp4-Fi-ni8">
-                                                                    <rect key="frame" x="0.0" y="434" width="343" height="20"/>
+                                                                    <rect key="frame" x="0.0" y="417" width="343" height="37"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="discovery-icon-suggested" translatesAutoresizingMaskIntoConstraints="NO" id="YHY-6r-wjr">
-                                                                            <rect key="frame" x="16" y="-9" width="18" height="18"/>
+                                                                            <rect key="frame" x="16" y="-0.33333333333331439" width="18" height="18"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="18" id="5ZN-u3-GUf"/>
                                                                                 <constraint firstAttribute="width" secondItem="YHY-6r-wjr" secondAttribute="height" multiplier="1:1" id="G4G-VM-jaZ"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suggested for" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNC-Oe-XCP">
-                                                                            <rect key="frame" x="46" y="0.0" width="285" height="0.0"/>
+                                                                            <rect key="frame" x="46" y="0.0" width="285" height="17"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -173,13 +186,13 @@
                                                             </subviews>
                                                         </stackView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Psg-dH-oMI">
-                                                            <rect key="frame" x="0.0" y="0.0" width="171.5" height="343"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="343"/>
                                                             <connections>
                                                                 <action selector="backButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="b5a-db-T4B"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJK-9R-lNQ">
-                                                            <rect key="frame" x="171.5" y="0.0" width="171.5" height="343"/>
+                                                            <rect key="frame" x="171.66666666666663" y="0.0" width="171.33333333333337" height="343"/>
                                                             <connections>
                                                                 <action selector="forwardButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="pKB-Cr-4lm"/>
                                                             </connections>
